# MaxQuestBot

./: .env.example  .gitignore  ADMIN_PANEL_README.md  BOT_README.md  PROJECT_RESPONSIBILITIES.md  README.md  main.py  pyproject.toml
admin_panel/: app.py  config.py  csv_import.py  db.py  main.py  security.py  views.py
back/: .env.example  Dockerfile  docker-compose.yaml  go.mod  maxbot.postman_collection.json
back/cmd/app/: main.go
back/internal/app/: app.go  container.go  routes.go
back/internal/config/: config.go
back/internal/domain/attempt/: model.go  repository.go  service.go
back/internal/domain/auth/: model.go  repository.go  service.go
back/internal/domain/common/: errors.go  types.go
back/internal/domain/quest/: model.go  repository.go  service.go
back/internal/domain/question/: model.go  repository.go  service.go
back/internal/domain/user/: model.go  repostiory.go  (+1 more)
back/internal/observability/: logger.go  metrics.go  tracing.go
back/internal/security/: jwt.go  password.go  permissions.go
back/migrations/: 000001_init.down.sql  000001_init.up.sql
max_quest_bot/: __init__.py  backend.py  config.py  handlers.py  keyboards.py  models.py  runtime.py  sample_data.py  sqlite_backend.py
tests/: test_admin_panel.py  test_backend.py  test_bot_contact_parsing.py  test_bot_navigation.py  test_bot_registration_flow.py  test_sqlite_backend.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  styles.css  ui.jsx  utils.js
web/src/pages/: AdminPage.jsx  LandingPage.jsx  WebAppPage.jsx
(+43 files in other folders)
